<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Jay Note</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_tip">Tips</string>
    <string name="title_activity_sighting">Your Sighting</string>
    <string name="title_activity_note">Your Note</string>
    <string name="title_activity_links">Links</string>
    <string name="title_activity_note_list">Field Notes</string>
    <string name="title_activity_sighting_list">Sightings</string>
    <string name="Shelter"><u>Shelter</u></string>
    <string name="Fire"><u>Fire</u></string>
    <string name="Food"><u>Food</u></string>
    <string name="Water"><u>Water</u></string>
    <string name="FirstAid"><u>First Aid</u></string>

    <string-array name="links">
        <item>http://ees.elsevier.com/wemj/</item>
        <!-- ^Wilderness & Environmental Medicine -->
        <item>http://www.nols.edu/</item>
        <!-- ^National Outdoor LeaderShip School -->
        <item>http://store.hesperian.org/HB/prod/B010R.html</item>
        <!-- ^Where There is No Doctor Book -->
        <item>http://www.wildsafe.org/ </item>
        <!-- ^Center For Wilderness Safety -->
        <item>http://morethanjustsurviving.com/how-to-find-civilization-when-you-have-no-idea-where-you-are/</item>
        <!-- ^^How to Find Civilization -->
        <item>http://survivalshelf.com/</item>
        <!-- ^Survival Shelf -->
        <item>http://www.shtfpreparedness.com/bug-out-bag-checklist/</item>
        <!-- ^Making a Bug-Out Bag; Useful for emergency situations. -->
        <item>http://urbanprepperchick.blogspot.com/2012/06/blog-post_10.html</item>
        <!-- ^Various PDFs for Survival -->
        <item>https://en.wikipedia.org/wiki/Ten_Essentials</item>
        <!-- ^Ten Essentials for hikers -->
    </string-array>

    <!-- Shelter, fire, food, water, first aid. These are the survival tips -->
    <string-array name="shelter">
        <item>One shelter that has worked very well in the past, is a lean-to shelter, it is fairly easy to construct, and is very effective.</item>
        <item>Make the inside of your shelter as small as you can in cold conditions with lots of insulation</item>
        <item>Building a fire reflector (a wall of sticks, rocks, etc.) will improve a lean-to by reflecting the fire\'s warmth back into the open side of the lean-to.</item>
        <item>Bring one or two metallic rescue blankets wherever you go. They are useful for building shelters, reflectors, and water collectors, and you can even cook with them.</item>
        <item>Bring a cheap, lightweight tent with you whenever you go hiking, even if you are not staying the night. Consider a tube tent. A tube can be constructed by gluing (with waterproof glue) the long edge of a thin tarp or plastic drop cloth to the matching edge, creating a tube of-sorts. To use, simply string the string from one end of the tube through the other end, and tie the ends between two trees. If you are injured in the wilderness, such a shelter can be easy to erect quickly. When injured (particularly in cold weather) proper shelter can be essential for your survival.</item>
    </string-array>
    <string-array name="fire">
        <item>Paper, cardboard, or unneeded cloth can be easy to start on fire</item>
        <item>Use small twigs from under the main canopy of the tree as tinder. (If they don\'t break off easily, they are still green.)</item>
        <item>Dry pine needles work great to start fires and give off lots of smoke.</item>
        <item>Rubbing bark between your hands until it is fluffy also makes excellent tinder</item>
        <item>The old fire-bow trick is very hard work even under the best circumstances</item>
        <item>Fire can be started with a glass lens from a magnifying glass, mirror, binoculars, and the polished bottom of a soda can. (Most eyeglasses will not work.)</item>
        <item>Flint and steel works but you must practice with it first.</item>
        <item>Two-part chemical fire starters work fairly well and work even in the rain</item>
        <item>Magnesium fire starters work well but practice with them first</item>
    </string-array>
    <string-array name="food">
        <item>Do not eat mushrooms or fungi unless you know for certain that it is edible. Most are poisonous, and there is no way of determining which ones are edible without properly identifying the species.</item>
        <item>Plants with umbrella-shaped flowers should not be eaten.</item>
        <item>The berry rule is that 10\%% of white and yellow berries are edible; 50\%% of red berries are edible; 90\%% of blue, black, or purple berries are edible, and 99\%% of aggregated berries are edible.</item>
        <item>Aggregated fruits and berries are almost always edible (blackberry, raspberry, salmonberry, and thimbleberry).</item>
        <item>Wild nuts that taste or smell like almonds are EXTREMELY dangerous. They contain hydrogen cyanide.</item>
        <item>Plants with shiny leaves or a milky sap are considered to be poisonous. The two that don\'t follow this rule are Dandelion and Fig. (Both have milky sap.)</item>
        <item>Single fruits on a stem are usually considered safe to eat.</item>
        <item>Most worms and grub are good to eat. It helps to toast grub until they are dried.</item>
        <item>Avoid fuzzy, hairy or bright colored insects.</item>
        <item>Avoid insects that sting or bite.</item>
        <item>Fish are easier to catch than wild game.</item>
        <item>The time frame of weeks may surprise some, but the reality is that in most survival situations, food is the least important factor.</item>
    </string-array>
    <string-array name="water">
        <item>Please avoid the thought of rationing water. The best storage container in a survival situation is your own body. Even experienced soldiers have been found dead of dehydration with a full canteen.</item>
        <item>Humans can survive 3 days on average without water</item>
        <item>Game trails leading down-slope may lead to water, but it may be miles away.</item>
        <item>Water is more likely found in green areas with a good amount of vegetation.</item>
        <item>You should have a map that shows water sources in the area where you plan to operate.</item>
        <item>Dew can be a water source when it condenses on any surface. Sop it up with a sponge or cloth.</item>
        <item>DO NOT drink seawater unless it is distilled! It takes twice as much water for your body to process seawater as you get from it.</item>
        <item>NEVER drink urine, even if it is filtered. Your kidneys may not be able to clean the buildup.</item>
        <item>Avoid eating snow in cold weather; doing so can significantly lower body temperature (as can becoming dehydrated) and even lead to shock.</item>
        <item>Even bringing water to temperature uncomfortably hot to the touch kills most organisms, but boil if you can.</item>
    </string-array>
    <string-array name="firstaid">
        <item>Make sure to dry out if you get wet, hypothermia can occur in less than an hour at temperatures as high as 15°C (59°F) </item>
        <item>The basic early symptoms of hypothermia are uncontrollable shivering, stiffness and confusion. </item>
        <item>Sun stroke often causes major damage to body systems such as brain, kidney, liver, gastric tract.</item>
        <item>If you are feeling overheated, sit, laydown and raise your legs. Rehydrate and find a cool area</item>
        <item>Most animal bites should be considered as possible sources of infection, including rabies. Wash the wound, ideally with povidone iodine soap. Loosely bandage it, and do not suture it.</item>
        <item>Wounds with spurting, bright red blood require immediate pressure to stop the bleeding. If necessary, you may need to use your finger to push on the bleeding artery.</item>
        <item>Relatively harmless local infections at the wound site can quickly escalate into life-threatening systemic infections if proper care is not taken.</item>
        <item>The basic treatment is oil of cloves on packing in the sore tooth to reduce the pain. </item>
    </string-array>

    <string name="new_sighting">New Sighting</string>
    <string name="your_sightings">Your Sightings</string>
    <string name="new_blanknote">New Note</string>
    <string name="note_title_hint">Name of Note</string>
    <string name="sighting_title"><u>Title</u></string>
    <string name="size_animal"><u>Size of Organism</u></string>
    <string name="size_hint">Bigger than, smaller than</string>
    <string name="estimated_weight"><u>Estimated Weight</u></string>
    <string name="weight_hint">Heavier than, lighter than, etc.</string>
    <string name="type_of_organism"><u>Type of Organism</u></string>
    <string name="type_organism_hint">A reptile, a bird, a mammal, etc.</string>
    <string name="color_organism"><u>Colors</u></string>
    <string name="upload_sound"><u>Upload Sound</u></string>
    <string name="organism_photo"><u>Photo</u></string>
    <string name="time_of_day"><u>Time/Date</u></string>
    <string name="location"><u>Location</u></string>
    <string name="misc"><u>Misc</u></string>
    <string name="insert_text_here">Insert Note Text Here:</string>
    <string name="save">Save</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="close">Close</string>
    <string name="survivaltips">Tips</string>
    <string name="links">Links</string>
    <string name="menulinks">Links</string>
    <string name="menuhome">Home</string>
    <string name="menutips">Tips</string>
    <string name="menunotes">Notes</string>
    <string name="title_activity_web_view">Web View</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_picture_preview">picture_preview</string>

</resources>