<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/background"
    tools:context="com.csit551.appinventors.jaynote.Activities.NoteActivity">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/note_title_hint"
        android:id="@+id/note_name_edit"
        android:layout_alignParentLeft="true"

        android:layout_alignParentStart="true"
        android:textColor="#FFFFFF"
        style="@style/regular_text"/>

    <EditText
        android:id="@+id/note_content"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:hint="@string/insert_text_here"
        style="@style/regular_text"
        android:gravity="top|left"
        android:inputType="textEmailAddress|textMultiLine"
        android:minLines="10"
        android:scrollHorizontally="false"
        android:scrollbars="vertical"
        android:singleLine="false"
        android:layout_marginTop="40dp"
        android:layout_alignLeft="@+id/note_name_edit"
        android:layout_alignStart="@+id/note_name_edit"
        android:layout_above="@+id/save" />

    <Button
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:id="@+id/save"
        android:textColor="#FFFFFF"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:textStyle="bold"
        android:background="@drawable/round_vague_drawable"
        android:text="@string/save"
        />

    <Button
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:id="@+id/edit"
        android:textColor="#FFFFFF"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:textStyle="bold"
        android:background="@drawable/round_vague_drawable"
        android:text="@string/edit"/>

    <Button
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:id="@+id/delete"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        android:background="@drawable/delete_drawable"
        android:text="@string/delete"/>

</RelativeLayout>
